Add missing files from shop keeper

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ dependencies {
 */
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.google.android.gms:play-services-places:9.8.0'
     compile 'com.navercorp.volleyextensions:volley-views:2.0.+'
+    compile 'com.google.android.gms:play-services-gcm:9.8.0'
+
 
 }
